--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,12 @@
-evernote==1.25.3
 beautifulsoup4==4.6.0
-pydantic[dotenv]==1.8.2
+certifi==2022.5.18.1
+charset-normalizer==2.0.12
+evernote3==1.25.14
+idna==3.3
+oauthlib==3.2.0
+pydantic==1.8.2
+python-dotenv==0.20.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+typing_extensions==4.2.0
+urllib3==1.26.9
