--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
 beautifulsoup4==4.6.0
 evernote3==1.25.14
+oauth2==1.9.0.post1
 oauthlib==3.2.0
 pydantic==1.8.2
+pyparsing==3.0.9
+python-dotenv==0.20.0
+requests==2.27.1
+requests-oauthlib==1.3.1
+typing_extensions==4.2.0
+urllib3==1.26.9
